--- a/forgame/css/game.css
+++ b/forgame/css/game.css
@@ -114,7 +114,7 @@ a:active {
     height: 0;
     width: 0;
     margin-top: 40px;
-    background: url(/dozer1/forgame/img/go.png) no-repeat center;
+    background: url(/dozer/forgame/img/go.png) no-repeat center;
     background-size: 100%;
     opacity: 0
 }
@@ -123,7 +123,7 @@ a:active {
     margin: auto;
     width: 50px;
     height: 50px;
-    background: url(/dozer1/forgame/img/ellipsis.svg) no-repeat center;
+    background: url(/dozer/forgame/img/ellipsis.svg) no-repeat center;
     background-size: 100%
 }
 
@@ -209,7 +209,7 @@ a:active {
 }
 
 .new_ui_loading-gif {
-    background-image: url(/dozer1/forgame/img/loading.gif);
+    background-image: url(/dozer/forgame/img/loading.gif);
     background-size: 100px 50px;
     width: 100px;
     height: 50px;
@@ -250,7 +250,7 @@ a:active {
     display: inline-block;
     overflow: hidden;
     background-repeat: no-repeat;
-    background-image: url(/dozer1/forgame/img/new_ui_sprite.png)
+    background-image: url(/dozer/forgame/img/new_ui_sprite.png)
 }
 
 .new_ui_button-close {
